--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,13 @@ layout: compress
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"><!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"><!--<![endif]-->
+
 <head>
     {% include head.html %}
 </head>
+
 <body>
     {% include nav.html %}
     <!-- Header -->
@@ -20,25 +23,25 @@ layout: compress
                     <h4>{{ page.date | date_to_string }}</h4>
                     {% if site.reading_time %}
                     <p class="reading-time">
-                      <i class="fa fa-clock-o"></i>
-                      {% include read-time.html %}
+                        <i class="fa fa-clock-o"></i>
+                        {% include read-time.html %}
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
-                    {% else %}
-                    <a class="btn zoombtn" href="{{site.url}}/posts/">
-                    {% endif %}
-                        <i class="fa fa-chevron-left"></i>
-                    </a>
+                        {% else %}
+                        <a class="btn zoombtn" href="{{site.url}}/posts/">
+                            {% endif %}
+                            <i class="fa fa-chevron-left"></i>
+                        </a>
                 </div>
                 {{ content }}
                 <div class="entry-meta">
-                {% include meta.html %}
+                    {% include meta.html %}
                 </div>
             </div>
         </div>
-        {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
+        
     </header>
     {% include scripts.html %}
     {% if site.mathjax == true %}
@@ -46,4 +49,5 @@ layout: compress
     <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {% endif %}
 </body>
+
 </html>
