--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -70,7 +70,7 @@ body {
 	align-items: center;
 }
 .container {
-	width: 36rem;
+	width: 35rem;
 	max-width: 550px;
 	padding-right: 15px;
 	padding-left: 15px;
@@ -78,7 +78,7 @@ body {
 	background-color: $white;
 	color: $color_shark;
 	z-index: 1;
-	border-radius: 3px;
+	border-radius: 5%;
 	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
 	@include transition(.5s);
 	@media #{$small} {
@@ -90,11 +90,12 @@ body {
 	}
 }
 .row {
-	margin-top: 15px;
+	margin-top: 25px;
+	margin-bottom: 25px;
 	text-align: center;
 	.title {
 	    margin-top: 0;
-	    margin-bottom: 5px;
+	    margin-bottom: 25px;
 	}
 	@media #{$small} {
 		padding: 0 1em;
