some css changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: compress
                         {% else %}
                         <a class="btn zoombtn" href="{{site.url}}/posts/">
                             {% endif %}
-                            <i class="fa fa-chevron-left"></i>
+                            <i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
                         </a>
                 </div>
                 {{ content }}
