--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -1,8 +1,8 @@
 .dl-menuwrapper {
 	width: 100%;
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 5px;
+	left: 5px;
 	z-index: 1000;
 	-webkit-perspective: 1000px;
 	-moz-perspective: 1000px;
@@ -17,13 +17,16 @@
 		left: 25px;
 	}
 	button {
-		top: 0;
-		left: 0;
+		display: flex;
+		align-items: center;
+		top: 5px;
+		left: 5px;
 		background: $comp-color;
 		border: none;
 		width: 48px;
 		height: 45px;
 		text-indent: -900em;
+		background-color: transparent;
 		overflow: hidden;
 		position: relative;
 		cursor: pointer;
@@ -31,7 +34,7 @@
 		@include border-radius(0,3px,0,0);
 		opacity: 1;
 		@media #{$notsmall} {
-			@include border-radius(3px,3px,3px,3px);
+			@include border-radius(7px,7px,7px,7px);
 		}
 	}
 	button:hover,
@@ -80,13 +83,12 @@
 				@include font-rem(14);
 			}
 		}
-		i {
-			// display: inline-block;
-		}
 		a {
 			display: block;
 			position: relative;
 			padding: 10px 20px;
+			border: 0.1mm solid rgb(16, 0, 27);
+			opacity: 1;
 			@include font-rem(14);
 			line-height: 20px;
 			font-weight: 400;
@@ -125,6 +127,7 @@
 		margin: 0;
 		position: absolute;
 		width: 100%;
+		border: 1px solid rgb(37, 1, 62);
 		max-width: 400px;
 		overflow-y: auto;
 		max-height: 600px;
@@ -138,7 +141,7 @@
 		-moz-backface-visibility: hidden;
 		backface-visibility: hidden;
 		@media #{$notsmall} {
-			@include border-radius(3px,3px,3px,3px);
+			@include border-radius(7px,7px,7px,7px);
 			max-height: 650px;
 		}
 	}
@@ -148,7 +151,7 @@
 		transition: all 0.3s ease;
 	}
 	.dl-menu.dl-menuopen {
-		opacity: 1;
+		opacity: 0.91;
 		pointer-events: auto;
 		-webkit-transform: translateY(0px);
 		-moz-transform: translateY(0px);
@@ -159,6 +162,9 @@
 		box-shadow: 0 12px 24px rgba($black,0.4);
 		.btn {
 			margin-bottom: 0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 	}
 	/* Hide the inner submenus */
@@ -367,5 +373,6 @@ All this is done for any sub-level being entered.
 	display: none
 }
 .dl-menuopen li {
-	display: block
+	display: block;
+	opacity: 1
 }
