--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,8 +6,8 @@ sitemap: false
  *
  *  Moon
  *
- *  Designer: Taylan Tatlı
- *  WEB: http://taylantatli.me
+ *  Designer: Tolga Tatlı
+ *  WEB: http://tolgatatli.dev
  *
 */
 
